ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2013/01/03 - jgonzale - prv2dim - 4.3.6
	BUGFIX:		MPI_Test[*] primitives are translated as communication
				wait records

2013/01/02 - jgonzale - Simulator | GUI
	BUGFIX:		Dimemas[GUI] not robust against ':' in trace name

2012/12/17 - jgonzale - Simulator - 4.3.5
	BUGFIX:		Collective operations compute the inter-node 'fans' when
				just one node involved

	BUGFIX:		Event type/values are now managed using 'unsigned long long'
				variables

	FEATURES:	Added 'TODO' file

2012/12/13 - jgonzale - Simulator - 4.3.4
	CHANGES:	Added the PID to Paraver temporal files to allow multiple
				simultaneos executions.

	CHANGES:	Increased the bison stack size.

2012/12/03 - jgonzale - Simulator - 4.3.3
	BUGFIX:		TASK_end / PARAVER_end order reversed. On file_data_access
				total number of file pointers reserved minus 2, so as to 
				guarantee the availability to the Paraver trace generator.

2012/12/03 - jgonzale - Simulator - 4.3.2
	BUGFIX:		TASK_end was called after PARAVER_end causing a resource lock
				regarding the total number of files opened.

2012/11/23 - jgonzale - Other
	CHANGES: 	Version update to '4.3.1'

	CHANGES:	Modifications to adapt to the build farm

2012/10/19 - jgonzale - Other
	CHANGES:	Version update to '4.3.0'

	CHANGES:	Minor cosmetic changes in the output

2012/10/19 - jgonzale - Other
	BUGFIX:		Solved a bug in the compilation system of the 'common_utilities'
				that prevent the Dimemas trace to create nanosecond traces.

2012/10/19 - jgonzale - Simulator
	CHANGES:	Using negative values in the 'modules information' field
				of the CFG file now indicated the simulator that all
				CPU bursts inside this module will change its duration to
				absoulte value of the number indicated. Required to