@@ -1,8 +1,10 @@
+20130130 - Dimemas/Venus interaction reported
+
 20121211 - Show a warning / Generate fake COMM_WORLD communicator when no communicators are defined on the trace
 
 20121205 - Merge 'trf2dim' with Vladimir's 'trf2trf' translators (to support StarSs/Tareador trace translation)
 
-* 20121213 - Add a random component (PID?) to 'Paraver' temporal files to allow multiple simultaneous runs...
+DONE 20121213 - Add a random component (PID?) to 'Paraver' temporal files to allow multiple simultaneous runs...
 
 20121217 - Overflows when reading big event values
 
